Fix cropped placeholder in newsletter input

--- a/app/assets/stylesheets/modules/footer.sass
+++ b/app/assets/stylesheets/modules/footer.sass
@@ -53,6 +53,8 @@ footer
         border: none
         top: 0px
         position: relative
+        padding-top: +emCalc(5px)
+        padding-bottom: +emCalc(5px)
         border-radius: $button-radius 0 0 $button-radius
         @media #{$medium}
           width: 190px
